--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/car_chassis_outline.png
     - assets/images/car_schema.png
     - assets/images/control_blueprint.png    
+    - assets/images/car_chassis_outline_swd.png
+    - assets/images/car_chassis_outline_fwd.png
+    - assets/images/car_chassis_outline_rwd.png
+    - assets/images/car_chassis_outline_awd.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
